[FEATURE Fixes #165955620] update margin left on smaller screens

--- a/UI/css/dashboard.css
+++ b/UI/css/dashboard.css
@@ -190,6 +190,14 @@ body {
     border-radius: 2px;
     display: inline-block;
 }
+
+#main .car-ad-list tr td button:hover {
+    color: #ffffff !important;
+    background: #008081;
+    cursor: pointer;
+    border-color: #008081 !important;
+    transition: all 0.4s ease 0s;
+}
   
 @media screen and (max-width: 601px) {
     #main .car-ad-list tr:nth-child(2) {
